--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  tmux-1.6.tar.gz: 8756f6bcecb18102b87e5d6f5952ba2541f68ed3
 sources:
-  "tmux-1.7.tar.gz": ee6942a1bc3fc650036f26921d80bc4b73d56df6
+  tmux-1.8.tar.gz: 08677ea914e1973ce605b0008919717184cbd033
